--- a/BizplayReceipt/View/MyReceipt/Receipt/ReceiptDetail/ReceiptDetailSB.storyboard
+++ b/BizplayReceipt/View/MyReceipt/Receipt/ReceiptDetail/ReceiptDetailSB.storyboard
@@ -64,7 +64,7 @@
                                     <constraint firstItem="9na-Yd-oA2" firstAttribute="top" secondItem="v4O-ys-yNQ" secondAttribute="top" id="fS0-uR-HwJ"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HiT-gP-f4T">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HiT-gP-f4T">
                                 <rect key="frame" x="57" y="157" width="300" height="616"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
@@ -117,10 +117,10 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="CommonCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommonCell" id="V07-Ev-0om" customClass="CommonCell" customModule="BizplayReceipt" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="118" width="300" height="44"/>
+                                        <rect key="frame" x="0.0" y="118" width="300" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="V07-Ev-0om" id="yVb-g5-ydU">
-                                            <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bno-Vl-5Dv">
@@ -132,7 +132,7 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="사업장" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VBE-Jh-1r1">
-                                                    <rect key="frame" x="46" y="15" width="32" height="14.5"/>
+                                                    <rect key="frame" x="46" y="14.5" width="32" height="14.5"/>
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="12"/>
                                                     <color key="textColor" red="0.24313725489999999" green="0.2666666667" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
@@ -160,20 +160,20 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="AttachedPhotoCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AttachedPhotoCell" id="lJg-kw-1jm" customClass="AttachedPhotoCell">
-                                        <rect key="frame" x="0.0" y="162" width="300" height="44"/>
+                                        <rect key="frame" x="0.0" y="161.5" width="300" height="41"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lJg-kw-1jm" id="djG-gr-tz2">
-                                            <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="41"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="첨부사진" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Us8-uF-t7x">
-                                                    <rect key="frame" x="16" y="11" width="52" height="22"/>
+                                                    <rect key="frame" x="16" y="11" width="52" height="19"/>
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
                                                     <color key="textColor" red="0.24313725489999999" green="0.2666666667" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GDR-7I-aHB">
-                                                    <rect key="frame" x="82" y="9" width="12" height="25.5"/>
+                                                    <rect key="frame" x="82" y="9" width="12" height="22.5"/>
                                                     <state key="normal" image="dropDownGreyIcon"/>
                                                     <connections>
                                                         <action selector="showPhotoDetail:" destination="lJg-kw-1jm" eventType="touchUpInside" id="VUS-AH-MRd"/>
@@ -191,7 +191,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="AttachedPhotoDetailCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AttachedPhotoDetailCell" rowHeight="300" id="mcM-zq-ssA" customClass="AttachedPhotoDetailCell" customModule="BizplayReceipt" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="206" width="300" height="300"/>
+                                        <rect key="frame" x="0.0" y="202.5" width="300" height="300"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mcM-zq-ssA" id="KFc-zU-J6Y">
                                             <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
@@ -216,7 +216,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ContentDetailCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContentDetailCell" rowHeight="252" id="m5V-aP-zKs" customClass="ContentDetailCell" customModule="BizplayReceipt" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="506" width="300" height="252"/>
+                                        <rect key="frame" x="0.0" y="502.5" width="300" height="252"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="m5V-aP-zKs" id="a2d-8P-rbt">
                                             <rect key="frame" x="0.0" y="0.0" width="300" height="252"/>
@@ -260,10 +260,12 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6vU-Ud-Vdo">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6vU-Ud-Vdo">
                                 <rect key="frame" x="0.0" y="806" width="414" height="56"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.32549019610000002" green="0.51764705879999995" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="5sx-U5-71c"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
                                 <state key="normal" title="영수증 제출하기">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -278,9 +280,14 @@
                             <constraint firstItem="HiT-gP-f4T" firstAttribute="leading" secondItem="WgH-hC-Bsw" secondAttribute="leading" constant="57" id="5Co-rO-Tte"/>
                             <constraint firstAttribute="trailing" secondItem="1QH-J5-QDT" secondAttribute="trailing" id="65q-zE-Y4a"/>
                             <constraint firstItem="1QH-J5-QDT" firstAttribute="leading" secondItem="dNT-E3-1Ht" secondAttribute="leading" id="6Pv-UQ-Ceg"/>
+                            <constraint firstItem="6vU-Ud-Vdo" firstAttribute="trailing" secondItem="v4O-ys-yNQ" secondAttribute="trailing" id="7Uq-u5-8c7"/>
                             <constraint firstItem="HiT-gP-f4T" firstAttribute="top" secondItem="v4O-ys-yNQ" secondAttribute="bottom" constant="57" id="8gw-Gc-QED"/>
                             <constraint firstItem="v4O-ys-yNQ" firstAttribute="trailing" secondItem="WgH-hC-Bsw" secondAttribute="trailing" id="Fs3-mP-e7k"/>
+                            <constraint firstItem="6vU-Ud-Vdo" firstAttribute="leading" secondItem="v4O-ys-yNQ" secondAttribute="leading" id="Y1I-EO-VZ2"/>
+                            <constraint firstItem="6vU-Ud-Vdo" firstAttribute="bottom" secondItem="WgH-hC-Bsw" secondAttribute="bottom" id="aAp-Oe-hJR"/>
+                            <constraint firstItem="HiT-gP-f4T" firstAttribute="top" secondItem="v4O-ys-yNQ" secondAttribute="bottom" constant="57" id="kJ0-XE-EnC"/>
                             <constraint firstItem="WgH-hC-Bsw" firstAttribute="trailing" secondItem="HiT-gP-f4T" secondAttribute="trailing" constant="57" id="kgm-VB-qxQ"/>
+                            <constraint firstItem="6vU-Ud-Vdo" firstAttribute="top" secondItem="HiT-gP-f4T" secondAttribute="bottom" constant="33" id="kp4-j1-nHm"/>
                             <constraint firstItem="v4O-ys-yNQ" firstAttribute="top" secondItem="WgH-hC-Bsw" secondAttribute="top" id="msu-qt-V6u"/>
                             <constraint firstItem="1QH-J5-QDT" firstAttribute="top" secondItem="dNT-E3-1Ht" secondAttribute="top" id="qx8-3o-RGf"/>
                             <constraint firstItem="v4O-ys-yNQ" firstAttribute="leading" secondItem="WgH-hC-Bsw" secondAttribute="leading" id="rmy-4o-yzA"/>
